# TestTaskGSLabs

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  settings.txt
include/: loadBalancer.h  server.h  settings.h  settingsParser.h
src/: loadBalancer.cpp  server.cpp  settingsParser.cpp
